--- a/sample/Jenkinsfile
+++ b/sample/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
    agent any
    environment {
-       //registry = "192.168.43.173:5000"
+       registry = "192.168.43.173:5000"
        //url = "${registry} + ${BUILD_NUMBER}"
        GOCACHE = "/tmp"
    }
@@ -9,7 +9,7 @@ pipeline {
        stage('Build') {
            agent {
                docker {
-                   image 'golang:latest'
+                   image 'golang'
                }
            }
            steps {
@@ -38,6 +38,29 @@ pipeline {
                sh 'go clean -cache'
                // Run Unit Tests.
                sh 'go test main_test.go'           
+           }
+       }
+       stage('Publish') {
+        //    environment {
+        //        registryCredential = 'dockerhub'
+        //    }
+           steps{
+
+               script {
+                  def appimage = docker.build registry + "/$BUILD_NUMBER"
+                   docker.withRegistry( '', registryCredential ) {
+                       appimage.push()
+                       appimage.push('latest')
+                   }
+               }
+           }
+       }
+       stage ('Deploy') {
+           steps {
+               script{
+                   def image_id = registry + ":$BUILD_NUMBER"
+                   sh "ansible-playbook  playbook.yml --extra-vars \"image_id=${image_id}\""
+               }
            }
        }
    }
